[Mac] MediaPlayerPrivateMediaSourceAVFObjC::load ASSERTs on lots of tests https://bugs.webkit.org/show_bug.cgi?id=127430

Reviewed by Eric Carlson.

When other registered media engines cannot load a URL, the engine selection
will eventually pick MediaPlayerPrivateMediaSourceAVFObjC and ask it to load
the URL. Instead of ASSERTing here, simply reject the URL by setting the
network state to FormatError.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::load):


Canonical link: https://commits.webkit.org/145437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162540 268f45cc-cd09-0410-ab3c-d52691b4dbfc